--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@json-render/react": "^0.2.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@ai-sdk/openai": "^1.3.0",
+    "ai": "^4.3.16",
     "next": "16.1.2",
-    "openai": "^4.72.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "three": "^0.182.0",
