--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "three": "^0.183.0",
+    "ws": "^8.19.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "@types/ws": "^8.18.1",
     "playwright": "^1.58.2",
     "typescript": "5.5.3"
   },
